3rdParty/AlazarTech/ATS-SDK/5.8.2/Include/AlazarApi.h

	typedef void *			 HANDLE;
//#endif

typedef enum BoardTypes { 
	ATS_NONE,  // NO BOARD WAS FOUND
	ATS850, 
	ATS310, 
	ATS330,
	ATS855,
	ATS315,
	ATS335,
	ATS460,
	ATS860,
	ATS660,
	ATS665,
	ATS9462,
	ATS9434,
	ATS9870,
	ATS9350,
	ATS_LAST 
}ALAZAR_BOARDTYPES;
typedef enum _AUTODMA_STATUS
{
    ADMA_Completed = 0,
    ADMA_Buffer1Invalid,
    ADMA_Buffer2Invalid,
    ADMA_BoardHandleInvalid,
    ADMA_InternalBuffer1Invalid,
    ADMA_InternalBuffer2Invalid,
    ADMA_OverFlow,
    ADMA_InvalidChannel,
    ADMA_DMAInProgress,
    ADMA_UseHeaderNotSet,
    ADMA_HeaderNotValid,
    ADMA_InvalidRecsPerBuffer,
	ADMA_InvalidTransferOffset,
	ADMA_InvalidCFlags
} AUTODMA_STATUS;
RETURN_CODE AlazarMemoryTest( HANDLE h, U32 *errors );
U32	      AlazarBoardsFound();
HANDLE      AlazarOpen( char * BoardNameID); //e.x. ATS850-0, ATS850-1 ....
void        AlazarClose( HANDLE h);
RETURN_CODE AlazarGetCPLDVersion( HANDLE h,U8 *Major,U8 *Minor);
RETURN_CODE AlazarGetChannelInfo( HANDLE h, U32 *MemSize, U8 *SampleSize);
RETURN_CODE AlazarGetSDKVersion(U8 *Major,U8 *Minor,U8 *Revision);
RETURN_CODE AlazarGetDriverVersion(U8 *Major,U8 *Minor,U8 *Revision);
// ****************************************************************************************
// Input Control API Functions
RETURN_CODE  AlazarInputControl( HANDLE h, U8 Channel, U32 Coupling, U32 InputRange, U32 Impedance);
RETURN_CODE  AlazarSetExternalTrigger( HANDLE h, U32 Coupling, U32 Range);
// ****************************************************************************************
// Trigger API Functions
RETURN_CODE  AlazarSetTriggerDelay( HANDLE h, U32 Delay);
RETURN_CODE  AlazarSetTriggerTimeOut( HANDLE h, U32 to_ns);
U32          AlazarTriggerTimedOut( HANDLE h);
RETURN_CODE  AlazarGetTriggerAddress( HANDLE h, U32 Record, U32 *TriggerAddress, U32 *TimeStampHighPart, U32 *TimeStampLowPart);
RETURN_CODE  AlazarSetTriggerOperation( HANDLE h, U32 TriggerOperation
											  ,U32 TriggerEngine1/*j,K*/, U32 Source1, U32 Slope1, U32 Level1
											  ,U32 TriggerEngine2/*j,K*/, U32 Source2, U32 Slope2, U32 Level2);
// ****************************************************************************************
// Capture API Functions
RETURN_CODE  AlazarAbortCapture( HANDLE h);
RETURN_CODE  AlazarForceTrigger( HANDLE h);
RETURN_CODE  AlazarStartCapture( HANDLE h);
// ****************************************************************************************
// OEM API Functions
RETURN_CODE AlazarStreamCapture( 
								HANDLE		h,
								void 		*Buffer,
								U32			BufferSize,
								U32			DeviceOption,
								U32			ChannelSelect,
								U32			*error
								);
// ****************************************************************************************
// Status API Functions
U32	AlazarBusy( HANDLE h);
U32	AlazarTriggered( HANDLE h);
U32	AlazarGetStatus( HANDLE h);
// ****************************************************************************************
// MulRec API Functions
U32         AlazarDetectMultipleRecord( HANDLE h);
RETURN_CODE AlazarSetRecordCount( HANDLE h, U32 Count);
RETURN_CODE AlazarSetRecordSize( HANDLE h, U32 PreSize, U32 PostSize);
// ****************************************************************************************
// Clock Control API Functions
RETURN_CODE AlazarSetCaptureClock( HANDLE h, U32 Source, U32 Rate, U32 Edge, U32 Decimation);
// ****************************************************************************************
// Data Transfer API Functions
U32	AlazarRead( HANDLE h, U32 Channel, void *Buffer, int ElementSize, long Record, long TransferOffset, U32 TransferLength);
// ****************************************************************************************
// Handle and System Management API Functions
HANDLE AlazarGetSystemHandle(U32 sid);
U32 AlazarNumOfSystems();
U32 AlazarBoardsInSystemBySystemID(U32 sid);
U32 AlazarBoardsInSystemByHandle(HANDLE systemHandle);
HANDLE AlazarGetBoardBySystemID(U32 sid, U32 brdNum);
HANDLE AlazarGetBoardBySystemHandle(HANDLE systemHandle, U32 brdNum);
RETURN_CODE AlazarSetLED( HANDLE h, U32 state);
U32 AlazarMaxSglTransfer(ALAZAR_BOARDTYPES bt);
// ****************************************************************************************
// Trigger Inquiry Functions
// Return values:
//              NEITHER   = 0
//              Channel A = 1
//              Channel B = 2
//              External  = 3
//              A AND B   = 4
//              A AND Ext = 5
//              B And Ext = 6
//              Timeout   = 7
U32 AlazarGetWhoTriggeredBySystemHandle( HANDLE systemHandle, U32 brdNum, U32 recNum);
U32 AlazarGetWhoTriggeredBySystemID( U32 sid, U32 brdNum, U32 recNum);
// AUTODMA Related Routines
//
// Control Flags for AutoDMA used in AlazarStartAutoDMA
#define ADMA_EXTERNAL_STARTCAPTURE	0x00000001
#define ADMA_ENABLE_RECORD_HEADERS	0x00000008
#define ADMA_SINGLE_DMA_CHANNEL		0x00000010
#define ADMA_ALLOC_BUFFERS			0x00000020
#define ADMA_TRADITIONAL_MODE		0x00000000
#define ADMA_CONTINUOUS_MODE		0x00000100
#define ADMA_NPT					0x00000200
#define ADMA_TRIGGERED_STREAMING	0x00000400
#define ADMA_FIFO_ONLY_STREAMING    0x00000800 //ATS9462 mode
RETURN_CODE  AlazarStartAutoDMA(HANDLE h, void* Buffer1, U32 UseHeader, U32 ChannelSelect, long TransferOffset, U32 TransferLength, long RecordsPerBuffer, long RecordCount, AUTODMA_STATUS* error, U32 r1, U32 r2, U32 *r3, U32 *r4);
RETURN_CODE  AlazarGetNextAutoDMABuffer( HANDLE h, void* Buffer1, void* Buffer2, long* WhichOne, long* RecordsTransfered, AUTODMA_STATUS* error, U32 r1, U32 r2, long *TriggersOccurred, U32 *r4);
RETURN_CODE  AlazarGetNextBuffer( HANDLE h, void* Buffer1, void* Buffer2, long* WhichOne, long* RecordsTransfered, AUTODMA_STATUS* error, U32 r1, U32 r2, long *TriggersOccurred, U32 *r4);
RETURN_CODE  AlazarCloseAUTODma(HANDLE h);
RETURN_CODE  AlazarAbortAutoDMA(HANDLE h, void* Buffer, AUTODMA_STATUS* error, U32 r1, U32 r2, U32 *r3, U32 *r4);
RETURN_CODE 
AlazarBeforeAsyncRead (
	HANDLE	hBoard, 
	U32		uChannelSelect, 
	long	lTransferOffset, 
	U32		uSamplesPerRecord, 
	U32		uRecordsPerBuffer, 
	U32		uRecordsPerAcquisition, 
	U32		uFlags
	);
RETURN_CODE 
AlazarAbortAsyncRead (
	HANDLE	 hBoard
	);
RETURN_CODE 
AlazarPostAsyncBuffer (
	HANDLE  hDevice,
	void   *pBuffer, 
	U32     uBufferLength_bytes
	);
RETURN_CODE 
AlazarWaitAsyncBufferComplete (
	HANDLE  hDevice,
	void   *pBuffer, 
	U32     uTimeout_ms
	);
RETURN_CODE
AlazarWaitNextAsyncBufferComplete (
	HANDLE  hDevice,
	void   *pBuffer, 
	U32     uBufferLength_bytes,
	U32     uTimeout_ms
	);