3rdParty/AlazarTech/ATS-SDK/5.8.2/Include/ATSApiVB.bas

Attribute VB_Name = "Module1"
'=============================================================================
'
' AlazarTech Inc
'
' File Name:
'
'      ATSApiVB.bas  - Version 5.5.0
'
' Copyright (c) 2006 AlazarTech Inc. All Rights Reserved.
' Unpublished - rights reserved under the Copyright laws of the
' United States And Canada.
'
' This product contains confidential information and trade secrets
' of AlazarTech Inc. Use, disclosure, or reproduction is
' prohibited without the prior express written permission of AlazarTech
' Inc
'
' Description:
'
'      Public Declarations
'
'=============================================================================
'
'********************************************************************
'Function And Subroutine Declarations
'********************************************************************
Public Declare Function VarPtr Lib "vbrun.Dll" (Var As Any) As Long
Public Declare Function AlazarOpen Lib "ATSApiVB.dll" (ByVal Name As String) As Integer
Public Declare Sub AlazarClose Lib "ATSApiVB.dll" (ByVal h As Integer)
Public Declare Function AlazarBoardsFound Lib "ATSApiVB.dll" () As Long
Public Declare Function AlazarGetCPLDVersion Lib "ATSApiVB.dll" (ByVal h As Integer, ByRef Major As Byte, ByRef Minor As Byte) As Long
Public Declare Function AlazarGetSDKVersion Lib "ATSApiVB.dll" (ByRef Major As Byte, ByRef Minor As Byte, ByRef Revision As Byte) As Long
Public Declare Function AlazarGetDriverVersion Lib "ATSApiVB.dll" (ByRef Major As Byte, ByRef Minor As Byte, ByRef Revision As Byte) As Long
Public Declare Function AlazarAbortCapture Lib "ATSApiVB.dll" (ByVal h As Integer) As Long
Public Declare Function AlazarForceTrigger Lib "ATSApiVB.dll" (ByVal h As Integer) As Long
Public Declare Function AlazarStartCapture Lib "ATSApiVB.dll" (ByVal h As Integer) As Long
Public Declare Function AlazarBusy Lib "ATSApiVB.dll" (ByVal h As Integer) As Long
Public Declare Function AlazarTriggered Lib "ATSApiVB.dll" (ByVal h As Integer) As Long
Public Declare Function AlazarGetStatus Lib "ATSApiVB.dll" (ByVal h As Integer) As Long
Public Declare Function AlazarGetChannelInfo Lib "ATSApiVB.dll" (ByVal h As Integer, ByRef MemSize As Long, ByRef SampleSize As Byte) As Long
Public Declare Function AlazarMemoryTest Lib "ATSApiVB.dll" (ByVal h As Integer, ByRef errors As Long) As Long
Public Declare Function AlazarAutoCalibrate Lib "ATSApiVB.dll" (ByVal h As Integer) As Long
Public Declare Function AlazarInputControl Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal Channel As Byte, ByVal Coupling As Long, ByVal InputRange As Long, ByVal Impedance As Long) As Long
Public Declare Function AlazarSetExternalTrigger Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal Coupling As Long, ByVal Range As Long) As Long
Public Declare Function AlazarSetTriggerDelay Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal Delay As Long) As Long
Public Declare Function AlazarSetTriggerTimeOut Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal to_ns As Long) As Long
Public Declare Function AlazarTriggerTimedOut Lib "ATSApiVB.dll" (ByVal h As Integer) As Long
Public Declare Function AlazarDetectMultipleRecord Lib "ATSApiVB.dll" (ByVal h As Integer) As Long
Public Declare Function AlazarSetTriggerOperation Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal TriggerOperation As Long, ByVal TriggerEngine1 As Long, ByVal Source1 As Long, ByVal Slope1 As Long, ByVal Level1 As Long, ByVal TriggerEngine2 As Long, ByVal Source2 As Long, ByVal Slope2 As Long, ByVal Level2 As Long) As Long
Public Declare Function AlazarGetTriggerAddress Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal Record As Long, ByRef TriggerAddress As Long, ByRef TimeStampHighPart As Long, ByRef TimeStampLowPart As Long) As Long
Public Declare Function AlazarSetRecordCount Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal Count As Long) As Long
Public Declare Function AlazarSetRecordSize Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal PreSize As Long, ByVal PostSize As Long) As Long
Public Declare Function AlazarSetCaptureClock Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal Source As Long, ByVal Rate As Long, ByVal Edge As Long, ByVal Decimation As Long) As Long
Public Declare Function AlazarRead Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal Channel As Long, ByRef Buffer As Any, ByVal ElementSize As Integer, ByVal Record As Long, ByVal TransferOffset As Long, ByVal TransferLength As Long) As Long
'********************************************************************
' System API
'********************************************************************
Public Declare Function AlazarGetSystemHandle Lib "ATSApiVB.dll" (ByVal sid As Integer) As Integer
Public Declare Function AlazarNumOfSystems Lib "ATSApiVB.dll" () As Long
Public Declare Function AlazarBoardsInSystemBySystemID Lib "ATSApiVB.dll" (ByVal sid As Integer) As Long
Public Declare Function AlazarBoardsInSystemByHandle Lib "ATSApiVB.dll" (ByVal systemHandle As Integer) As Long
Public Declare Function AlazarGetBoardBySystemID Lib "ATSApiVB.dll" (ByVal sid As Integer, ByVal brdNum As Long) As Integer
Public Declare Function AlazarGetBoardBySystemHandle Lib "ATSApiVB.dll" (ByVal systemHandle As Integer, ByVal brdNum As Long) As Integer
Public Declare Function AlazarSetLED Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal state As Integer) As Long
Public Declare Function AlazarMaxSglTransfer Lib "ATSApiVB.dll" (ByVal bt As Integer) As Long
Public Declare Function AlazarStreamCapture Lib "ATSApiVB.dll" (ByVal h As Integer, ByRef Buffer As Any, ByVal BufferSize As Long, ByVal DeviceOption As Long, ByVal ChannelSelect As Long, ByRef error As Long) As Integer
Public Declare Function AlazarGetWhoTriggeredBySystemHandle Lib "ATSApiVB.dll" (ByVal systemHandle As Integer, ByVal brdNum As Long, ByVal recNum As Long) As Long
Public Declare Function AlazarGetWhoTriggeredBySystemID Lib "ATSApiVB.dll" (ByVal sid As Integer, ByVal brdNum As Long, ByVal recNum As Long) As Long
'********************************************************************
'AUTO DMA Related Constants, and Functions
'Available on ATS460, ATS660, And ATS860  devices
'********************************************************************
Public Const ADMA_Completed                 As Long = 0
Public Const ADMA_Buffer1Invalid            As Long = 1
Public Const ADMA_Buffer2Invalid            As Long = 2
Public Const ADMA_BoardHandleInvalid        As Long = 3
Public Const ADMA_InternalBuffer1Invalid    As Long = 4
Public Const ADMA_InternalBuffer2Invalid    As Long = 5
Public Const ADMA_OverFlow                  As Long = 6
Public Const ADMA_InvalidChannel            As Long = 7
Public Const ADMA_DMAInProgress             As Long = 8
Public Const ADMA_UseHeaderNotSet           As Long = 9
Public Const ADMA_HeaderNotValid            As Long = 10
Public Const ADMA_InvalidRecsPerBuffer      As Long = 11
'********************************************************************
' Control Flags for AutoDMA used in AlazarStartAutoDMA
Public Const ADMA_EXTERNAL_STARTCAPTURE  As Long = &H1
Public Const ADMA_TRADITIONAL_MODE       As Long = &H0
Public Const ADMA_ENABLE_RECORD_HEADERS  As Long = &H8
Public Const ADMA_SINGLE_DMA_CHANNEL     As Long = &H10
Public Const ADMA_ALLOC_BUFFERS          As Long = &H20
Public Const ADMA_CONTINUOUS_MODE        As Long = &H100
Public Const ADMA_NPT                    As Long = &H200
Public Const ADMA_TRIGGERED_STREAMING    As Long = &H400
Public Const ADMA_FIFO_ONLY_STREAMING    As Long = &H800 'ATS9462 mode
Public Declare Function AlazarStartAutoDMA Lib "ATSApiVB.dll" (ByVal h As Integer, ByRef Buffer1 As Any, ByVal UseHeader As Long, ByVal ChannelSelect As Long, ByVal TransferOffset As Integer, ByVal TransferLength As Long, ByVal RecordsPerBuffer As Long, ByVal RecordCount As Long, ByRef error As Long, ByVal r1 As Long, ByVal r2 As Long, ByRef r3 As Long, ByRef r4 As Long) As Long
'********************************************************************
Public Declare Function AlazarGetNextAutoDMABuffer Lib "ATSApiVB.dll" (ByVal h As Integer, ByRef Buffer1 As Any, ByRef Buffer2 As Any, ByRef WhichOne As Long, ByRef RecordsTransfered As Long, ByRef error As Long, ByVal r1 As Long, ByVal r2 As Long, ByRef TriggersOccurred As Long, ByRef r4 As Long) As Long
Public Declare Function AlazarGetNextBuffer Lib "ATSApiVB.dll" (ByVal h As Integer, ByRef Buffer1 As Any, ByRef Buffer2 As Any, ByRef WhichOne As Long, ByRef RecordsTransfered As Long, ByRef error As Long, ByVal r1 As Long, ByVal r2 As Long, ByRef TriggersOccurred As Long, ByRef r4 As Long) As Long
Public Declare Function AlazarCloseAUTODma Lib "ATSApiVB.dll" (ByVal h As Integer) As Long
Public Declare Function AlazarAbortAutoDMA Lib "ATSApiVB.dll" (ByVal h As Integer, ByRef Buffer1 As Any, ByRef error As Long, ByVal r1 As Long, ByVal r2 As Long, ByRef r3 As Long, ByRef r4 As Long) As Long
Public Declare Function AlazarBeforeAsyncRead Lib "ATSApiVB.dll" (ByVal h As Integer, ByVal uChannelSelect As Long, ByVal lTransferOffset As Long, ByVal uSamplesPerRecord As Long, ByVal uRecordsPerBuffer As Long, ByVal uRecordsPerAcquisition As Long, ByVal uFlags As Long) As Long
Public Declare Function AlazarWaitAsyncBufferComplete Lib "ATSApiVB.dll" (ByVal h As Integer, ByRef Buffer As Any, ByVal uTimeout_ms As Long) As Long
Public Declare Function AlazarWaitNextAsyncBufferComplete Lib "ATSApiVB.dll" (ByVal h As Integer, ByRef Buffer As Any, ByVal uBufferLength_bytes As Long, ByVal uTimeout_ms As Long) As Long
Public Declare Function AlazarAbortAsyncRead Lib "ATSApiVB.dll" (ByVal h As Integer) As Long
Public Declare Function AlazarPostAsyncBuffer Lib "ATSApiVB.dll" (ByVal h As Integer, ByRef Buffer As Any, ByVal BytesPerBuffer As Long) As Long
